--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "koa-body": "^4.2.0",
     "koa-static": "^5.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2"
   }
 }
