--- a/package.json
+++ b/package.json
@@ -1,33 +1,67 @@
 {
-  "name": "http-server",
+  "name": "todo-list",
   "version": "1.0.0",
-  "description": "homework",
   "main": "index.js",
   "scripts": {
-    "prestart": "npm install",
-    "start": "forever server.js",
-    "watch": "forever -w server.js"
+    "build": "webpack-dev-server --mode production",
+    "coverage": "jest --testPathPattern=./src/ --coverage",
+    "doc": "jsdoc -c jsdoc.conf.json",
+    "e2e": "jest --testPathPattern=./e2e/",
+    "lint": "eslint .",
+    "start": "webpack-dev-server --mode development",
+    "test": "exit 0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ChumakovaAnna/AHJ7.1.git"
+    "url": "https://github.com/ChumakovaAnna/AHJ7.2.git"
   },
-  "author": "Chumakova",
+  "keywords": [
+    "events"
+  ],
+  "author": "Anna Chumakova",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ChumakovaAnna/AHJ7.1/issues"
+    "url": "https://github.com/ChumakovaAnna/AHJ7.2/issues"
   },
-  "homepage": "https://github.com/ChumakovaAnna/AHJ7.1#readme",
-  "dependencies": {
-    "forever": "^4.0.1",
-    "koa": "^2.13.1",
-    "koa-body": "^4.2.0",
-    "koa-static": "^5.0.0",
-    "uuid": "^8.3.2"
-  },
+  "homepage": "https://github.com/ChumakovaAnna/AHJ7.2#readme",
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "babel-jest": "^26.0.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.21.2"
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest": "^23.18.0",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "inline-source-map": "^0.6.2",
+    "jest": "^26.0.1",
+    "jsdoc": "^3.6.4",
+    "puppeteer": "^10.1.0",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "core-js": "3",
+    "dayjs": "^1.10.6",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "nanoid": "^3.1.23",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "push-dir": "^0.4.1",
+    "terser-webpack-plugin": "^3.0.6",
+    "uuidv4": "^6.2.12",
+    "webpack-merge": "^4.2.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm test",
+      "pre-push": "npm test"
+    }
   }
 }
