--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,11 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "single"
+        ],
+        "linebreak-style": "off",
+        "import/no-extraneous-dependencies": [
+            "error", { "devDependencies": true }
         ]
     }
 }
